--- a/AS91896-AS91897.vbproj
+++ b/AS91896-AS91897.vbproj
@@ -7,6 +7,7 @@
     <StartupObject>AS91896_AS91897.Form4</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
     <MyType>WindowsForms</MyType>
+    <UseWPF>True</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
